# streamly-text

./: .packcheck.ignore  CHANGELOG.md  LICENSE  README.md  cabal.project.Werror  flake.nix  packages.nix  sources.nix  streamly-text.cabal
.github/workflows/: packcheck.yml
src/Streamly/Compat/: Text.hs
src/Streamly/Compat/Text/: Lazy.hs
test/: Main.hs
