cabal-version:       2.4
name:                streamly-text
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Composewell Technologies
maintainer:          streamly@composewell.com
extra-source-files:  CHANGELOG.md
extra-doc-files:     README.md

common compile-options
    default-language: Haskell2010
    ghc-options:    -Weverything
                    -Wno-implicit-prelude
                    -Wno-missing-deriving-strategies
                    -Wno-missing-exported-signatures
                    -Wno-missing-import-lists
                    -Wno-missing-local-signatures
                    -Wno-missing-safe-haskell-mode
                    -Wno-missed-specialisations
                    -Wno-all-missed-specialisations
                    -Wno-monomorphism-restriction
                    -Wno-prepositive-qualified-module
                    -Wno-unsafe
                    -Rghc-timing

library
  import:              compile-options
  exposed-modules:     Streamly.Compat.Text
                     , Streamly.Compat.Text.Lazy
  build-depends:       base          >=4.7   && <5
                     , streamly-core >=0.2.0 && <0.3.1
                     , text          >=2.0   && <2.1.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  import:              compile-options
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  build-depends:
      base >=4.7 && <5
    , text
    , hspec
    , quickcheck-instances
    , random
    , streamly-core
    , streamly-text
    , temporary
  default-language:   Haskell2010
