cabal-version:       2.4
name:                streamly-text
version:             0.1.1
synopsis:            Convert streamly Array type to Text type and vice versa.
description:
  No overhead interoperability between the @Array@ type from the
  @streamly-core@ package and the @Text@ type from the @text@ package.
  .
  Please see the README at <https://github.com/composewell/streamly-text> for
  more details.
category:            Streamly, Stream, Array, Text
license:             BSD-3-Clause
license-file:        LICENSE
author:              Composewell Technologies
maintainer:          streamly@composewell.com
extra-doc-files:     README.md, CHANGELOG.md
tested-with:
    GHC==9.14.1
  , GHC==9.12.4
  , GHC==9.10.3
  , GHC==9.8.4
  , GHC==9.6.3
  , GHC==9.4.8
  , GHC==9.2.8
  , GHC==8.10.7

common compile-options
    default-language: Haskell2010
    ghc-options:    -Weverything
                    -Wno-implicit-prelude
                    -Wno-missing-deriving-strategies
                    -Wno-missing-exported-signatures
                    -Wno-missing-import-lists
                    -Wno-missing-local-signatures
                    -Wno-missing-safe-haskell-mode
                    -Wno-missed-specialisations
                    -Wno-all-missed-specialisations
                    -Wno-monomorphism-restriction
                    -Wno-prepositive-qualified-module
                    -Wno-unsafe
                    -Rghc-timing

library
  import:              compile-options
  exposed-modules:     Streamly.Compat.Text
                     , Streamly.Compat.Text.Lazy
  build-depends:       base          >=4.7   && < 5
                     -- Should use minor versions as we depend on text
                     -- internals, but in practice it is more hassle and
                     -- little benefit. We can revise it on hackage if
                     -- it ever becomes a problem.
                     , streamly-core >=0.2.0 && < 0.4
                     , text          >=2.0   && < 2.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  import:              compile-options
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  build-depends:
      base >=4.7 && <5
    , text
    , hspec
    , quickcheck-instances
    , random
    , streamly-core
    , streamly-text
    , temporary
  default-language:   Haskell2010
